trustfall_core/test_data/tests/valid_queries/recurse_then_required_edge_depth_one.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Two {
        successor @recurse(depth: 1) {
            predecessor {
                value @output
            }
        }
    }
}"#,
    arguments: {},
)
