trustfall_core/test_data/tests/parse_errors/invalid_transform_op.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Two {
        value @transform(op: "nonexistent") @output
    }
}"#,
    arguments: {},
)
